continuing to edit

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<script src="https://kit.fontawesome.com/8e33fa365a.js" crossorigin="anonymous"></script>
 	</head>
 	<body class="is-preload">
 
@@ -38,7 +39,7 @@
 							<h2>About</h2>
 						</header>
 						<div class="content">
-							<p><strong>Lorem ipsum dolor</strong> sit amet consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
+							<p>Drawing upon my extensive background in process engineering, manufacturing, and the food and beverage industry, I offer a distinct viewpoint when it comes to Software Engineering. Through my proficiency in understanding user behavior and dissecting intricate systems, I possess the ability to craft user-friendly interfaces and construct robust applications that precisely meet users' requirements. By capitalizing on my knowledge in process engineering, I thrive in collaborative settings, working seamlessly with diverse teams to deliver top-notch software solutions that have a positive impact. Transitioning from the realm of food and beverage to Software Engineering has endowed me with a well-rounded skill set, enabling me to bridge the divide between technology and human experiences. Consequently, I am able to develop meaningful and user-centric software products that truly resonate with individuals.</p>
 							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 						</div>
 					</section>
@@ -49,16 +50,21 @@
 							<h2>Skills</h2>
 						</header>
 						<div class="content">
-							<p><strong>Etiam tristique libero</strong> eu nibh porttitor amet fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies condimentum.</p>
+							<p><strong>While we never stop learning,</strong> here are some languages and frameworks that I have learned so far...</p>
 							<ul class="feature-icons">
-								<li class="icon solid fa-laptop">Consequat tempus</li>
-								<li class="icon solid fa-bolt">Etiam adipiscing</li>
-								<li class="icon solid fa-signal">Libero nullam</li>
-								<li class="icon solid fa-cog">Blandit condimentum</li>
-								<li class="icon solid fa-map-marker-alt">Lorem ipsum dolor</li>
-								<li class="icon solid fa-code">Nibh amet venenatis</li>
+								<li class="fa-brands fa-square-js">Javascript</li>
+								<li class="fa-brands fa-python">Python</li>
+								<li >React</li>
+								<li >Redux</li>
+								<li >HTML5</li>
+								<li >CSS3</li>
+								<li >Flask</li>
+								<li >Express.js</li>
+								<li >Node.js</li>
+								<li >PostgreSQL</li>
+								<li >SQLAlchemy</li>
+								<li >And more...</li>
 							</ul>
-							<p>Vehicula ultrices sed ultricies condimentum. Magna sed etiam consequat, et lorem adipiscing sed nulla. Volutpat nisl et tempus et dolor libero, feugiat magna tempus, sed et lorem adipiscing.</p>
 						</div>
 					</section>
 
