add project info and gifs

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<!-- <meta property="og:title" content="AltTrails" />
+		<meta property="og:image" content="project_pic.png" />
+		<meta
+		  property="og:description"
+		  content="A brief description of your project"
+		/>
+		<meta
+		  property="og:url"
+		  content="https://programmer.github.io/project_name"
+		/> -->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<script src="https://kit.fontawesome.com/8e33fa365a.js" crossorigin="anonymous"></script>
 	</head>
@@ -74,20 +84,21 @@
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Integer mollis egestas</strong> nam maximus erat id euismod egestas. Pellentesque sapien ac quam. Lorem ipsum dolor sit nullam.</p>
+							<p><strong>Here is a </strong> peak into some of the projects I have been working on recently.</p>
 
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Erat aliquam</h3>
-										<p>Vehicula ultrices dolor amet ultricies et condimentum. Magna sed etiam consequat, et lorem adipiscing sed dolor sit amet, consectetur amet do eiusmod tempor incididunt  ipsum suspendisse ultrices gravida.</p>
+										<h3>AltTrails</h3>
+										<p> A soft-clone of AllTrails, AltTrails lets users share their favorite hiking trails with a larger community. Created using Javascript, Python, React, Redux, Flask, and SQLAlchemy, among other technologies.</p>
+										<a href="https://alttrails.onrender.com/">// Live Site</a>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/01.jpg" class="landscape"><img src="images/gallery/thumbs/01.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/02.jpg"><img src="images/gallery/thumbs/02.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/03.jpg"><img src="images/gallery/thumbs/03.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/04.jpg" class="landscape"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
+											<a href="https://alttrails.onrender.com/" class="landscape"><img src="ezgif.com-video-to-gif.gif" alt="gif of alt trails landing page" /></a>
+											<!-- <a href="https://alttrails.onrender.com/"><img src="alt-trails-cat.png" alt="" /></a>
+											<a href="https://alttrails.onrender.com/"><img src="alt trails myTrails.png" alt="" /></a> -->
+											<!-- <a href="https://alttrails.onrender.com/" class="landscape"><img src="alt-trails-detail.gif" alt="" /></a> -->
 										</div>
 									</div>
 								</section>
@@ -95,14 +106,15 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Nisl consequat</h3>
-										<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam sed facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet mauris. Ut magna finibus nisi nec lacinia ipsum maximus.</p>
+										<h3>Jumpstarter</h3>
+										<p>A soft clone of Kickstarter, Jumpstarter allows users to find funding to bring their creative projects to life. Created using Javascript, Python, React, Redux, Flask, and SQLAlchemy, among other technologies. </p>
+										<a href="https://jumpstarter.onrender.com/">// Live Site</a>
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/05.jpg" class="landscape"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/06.jpg"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/07.jpg"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
+											<a href="https://jumpstarter.onrender.com/" class="landscape"><img src="jumpstarter landing.gif" alt="" /></a>
+											<!-- <a href="https://jumpstarter.onrender.com/"><img src="jumpstarter project detail.png" alt="" /></a>
+											<a href="https://jumpstarter.onrender.com/"><img src="jumpstarter new project.png" alt="" /></a> -->
 										</div>
 									</div>
 								</section>
@@ -110,14 +122,16 @@
 							<!-- Section -->
 								<section>
 									<header>
-										<h3>Lorem gravida</h3>
-										<p>Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aenean ornare velit lacus, ac varius sed enim lorem ullamcorper dolore.  ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis.</p>
+										<h3>RareBnB</h3>
+										<p>A soft-clone of AirBnB, RareBnB allows users to list their properties for rental for weary travelers. Created using Javascript, React, Redux, Express.js, and Sequelize, among other technologies</p>
+										<a href="https://airbnb-api-jcqs.onrender.com">// Live Site</a>
+
 									</header>
 									<div class="content">
 										<div class="gallery">
-											<a href="images/gallery/fulls/08.jpg" class="portrait"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/09.jpg" class="portrait"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
-											<a href="images/gallery/fulls/10.jpg" class="landscape"><img src="images/gallery/thumbs/10.jpg" alt="" /></a>
+											<a href="https://airbnb-api-jcqs.onrender.com" class="landscape"><img src="rarebnb landing.gif" alt="" /></a>
+											<!-- <a href="https://airbnb-api-jcqs.onrender.com" class="portrait"><img src="rarebnb spot detail.png" alt="" /></a>
+											<a href="https://airbnb-api-jcqs.onrender.com" class="portrait"><img src="rarebnb manage.png" alt="" /></a> -->
 										</div>
 									</div>
 								</section>
@@ -126,7 +140,7 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<!-- <section>
 						<header>
 							<h2>Duis sed adpiscing veroeros amet</h2>
 						</header>
@@ -137,7 +151,7 @@
 								<li><a href="#" class="button large">Learn More</a></li>
 							</ul>
 						</div>
-					</section>
+					</section> -->
 
 				<!-- Elements -->
 				<!--
@@ -412,7 +426,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 						<header>
 							<h2>Get in touch</h2>
 						</header>
-						<div class="content">
+						<!-- <div class="content">
 							<p><strong>Auctor commodo</strong> interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis.</p>
 							<form>
 								<div class="fields">
@@ -430,30 +444,30 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 									<li><input type="submit" value="Send Message" class="button primary" /></li>
 								</ul>
 							</form>
-						</div>
+						</div> -->
 						<footer>
 							<ul class="items">
 								<li>
 									<h3>Email</h3>
-									<a href="#">information@untitled.ext</a>
+									<a href="#">Joshua.hulford@gmail.com</a>
 								</li>
 								<li>
 									<h3>Phone</h3>
-									<a href="#">(000) 000-0000</a>
+									<a href="#">(215) 317-8245</a>
 								</li>
-								<li>
+								<!-- <li>
 									<h3>Address</h3>
 									<span>1234 Somewhere Road, Nashville, TN 00000</span>
-								</li>
+								</li> -->
 								<li>
 									<h3>Elsewhere</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+										<li><a href="https://www.linkedin.com/in/joshua-hulford/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://github.com/Jhulford88" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<!-- <li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li> -->
 									</ul>
 								</li>
 							</ul>
@@ -461,7 +475,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 					</section>
 
 				<!-- Copyright -->
-					<div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div>
+					<!-- <div class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</div> -->
 
 			</div>
 
