added photos and made styling edits

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							</ul>
 						</header>
 						<div class="content">
-							<span class="image fill" data-position="center"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fill" data-position="center"><img src="Untitled design (5).png" alt="" /></span>
 						</div>
 					</section>
 
@@ -47,20 +47,26 @@
 					<section id="first">
 						<header>
 							<h2>About</h2>
+							<ul class="actions">
+								<li><a href="#second" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
 						</header>
 						<div class="content">
 							<p>Drawing upon my extensive background in process engineering, manufacturing, and the food and beverage industry, I offer a distinct viewpoint when it comes to Software Engineering. Through my proficiency in understanding user behavior and dissecting intricate systems, I possess the ability to craft user-friendly interfaces and construct robust applications that precisely meet users' requirements. By capitalizing on my knowledge in process engineering, I thrive in collaborative settings, working seamlessly with diverse teams to deliver top-notch software solutions that have a positive impact. Transitioning from the realm of food and beverage to Software Engineering has endowed me with a well-rounded skill set, enabling me to bridge the divide between technology and human experiences. Consequently, I am able to develop meaningful and user-centric software products that truly resonate with individuals.</p>
-							<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+							<!-- <span class="image main"><img src="images/pic02.jpg" alt="" /></span> -->
 						</div>
 					</section>
 
 				<!-- Section -->
-					<section>
+					<section id="second">
 						<header>
 							<h2>Skills</h2>
+							<ul class="actions">
+								<li><a href="#third" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
 						</header>
 						<div class="content">
-							<p><strong>While we never stop learning,</strong> here are some languages and frameworks that I have learned so far...</p>
+							<p><strong>While we never stop learning,</strong> here are some of the languages and frameworks that I am proficient in...</p>
 							<ul class="feature-icons">
 								<li class="fa-brands fa-square-js">Javascript</li>
 								<li class="fa-brands fa-python">Python</li>
@@ -79,15 +85,18 @@
 					</section>
 
 				<!-- Section -->
-					<section>
+					<section id="third">
 						<header>
+							<ul class="actions">
+								<li><a href="#fourth" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
 							<h2>Projects</h2>
 						</header>
 						<div class="content">
-							<p><strong>Here is a </strong> peak into some of the projects I have been working on recently.</p>
+							<p><strong>Here is a </strong> peak into some of the projects I have been working on recently...</p>
 
 							<!-- Section -->
-								<section>
+								<section >
 									<header>
 										<h3>AltTrails</h3>
 										<p> A soft-clone of AllTrails, AltTrails lets users share their favorite hiking trails with a larger community. Created using Javascript, Python, React, Redux, Flask, and SQLAlchemy, among other technologies.</p>
@@ -422,7 +431,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				-->
 
 				<!-- Section -->
-					<section>
+					<section id="fourth">
 						<header>
 							<h2>Get in touch</h2>
 						</header>
@@ -467,6 +476,7 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 										<li><a href="https://www.linkedin.com/in/joshua-hulford/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="https://github.com/Jhulford88" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://docs.google.com/document/d/1OlY2-HNbXbEW6t2XtmZILDdGsApQ4xwHBogFtQ2ENdU/edit?usp=sharing"><span class="label">Resume</span></a></li>
 										<!-- <li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li> -->
 									</ul>
 								</li>
