add repo links to each project

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
 									<header>
 										<h3>AltTrails</h3>
 										<p> A soft-clone of AllTrails, AltTrails lets users share their favorite hiking trails with a larger community. Created using Javascript, Python, React, Redux, Flask, and SQLAlchemy, among other technologies.</p>
-										<a href="https://alttrails.onrender.com/">// Live Site</a>
+										<a target="blank" href="https://alttrails.onrender.com/">// Live Site</a>
+										<br>
+										<a target="blank" href="https://github.com/Jhulford88/AltTrails">// Github Repo</a>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -117,7 +119,9 @@
 									<header>
 										<h3>Jumpstarter</h3>
 										<p>A soft clone of Kickstarter, Jumpstarter allows users to find funding to bring their creative projects to life. Created using Javascript, Python, React, Redux, Flask, and SQLAlchemy, among other technologies. </p>
-										<a href="https://jumpstarter.onrender.com/">// Live Site</a>
+										<a target="blank" href="https://jumpstarter.onrender.com/">// Live Site</a>
+										<br>
+										<a target="blank" href="https://github.com/dreabd/kickstarter-clone">// Github Repo</a>
 									</header>
 									<div class="content">
 										<div class="gallery">
@@ -133,8 +137,9 @@
 									<header>
 										<h3>RareBnB</h3>
 										<p>A soft-clone of AirBnB, RareBnB allows users to list their properties for rental for weary travelers. Created using Javascript, React, Redux, Express.js, and Sequelize, among other technologies</p>
-										<a href="https://airbnb-api-jcqs.onrender.com">// Live Site</a>
-
+										<a target="blank" href="https://airbnb-api-jcqs.onrender.com">// Live Site</a>
+										<br>
+										<a target="blank" href="https://github.com/Jhulford88/RareBnB">// Github Repo</a>
 									</header>
 									<div class="content">
 										<div class="gallery">
